app/assets/sass/dri/dri.scss
/* ... */
.dropit .dropit-open .dropit-submenu {
  display: block;
}

/*-------------- OBJECT VIEW --------------*/

.dri_object_title_top {
  font-size: 110%;
  padding: 1px 20px 4px 10px;
  margin: 10px 0 10px 0;
  height: 26px;
  text-overflow: ellipsis;
  overflow: hidden;
  color: #fff;
  background-color: $dri_grey;
  //width: 73%;
  font-weight: bold;
  line-height: 26px
}

/*-------------- Media asset/ Multiple Media Assets Carousel --------------*/
.dri_object_render_block {
  margin: 10px 0 10px 0;
  padding: 0px;
}

.dri_bottom_stack {
  z-index: 0;
}

h2.dri_no_asset_availiable {
  margin: 0px 0 0 0;
  padding: 0px;
  color: $dri_grey;
  font-weight: bold;
  font-size: 100%;
  font-style: italic;
}

/* assets carousel */
.dri_asset_holder {
  margin: 20px 0 0 0;
  padding-right:40px;
  max-width: 100%;
  max-height: 300px;
  display: block;
  overflow: hidden;
  .carousel-control {
    background: none;
    border: none;
    opacity: 1.0;
    font-size: 100%;
    line-height: 100%;
  }
  .carousel-control.left {
    //background-image: url("previous_carousel_arrow.png");
    top: 95%;
    width: 12px;
    height: 8px;
    margin-top: -5px;
    padding: 0;
  }
  .carousel-control.right {
    //background-image: url("next_carousel_arrow.png");
    top: 95%;
    width: 12px;
    height: 10px;
    margin-top: -5px;
    padding: 0;
  }
  .dri_asset_carousel_item {
    height: 300px;
    p {
      padding: 5px 0 0 40px;
    }
    a {
      img {
        max-height: 300px;
      }
    }
    .carousel-caption {
      background: rgba(47, 47, 47, 0.75);
      height: 30px;
      padding: 0px;
      margin: 0px;
      a {
        color: #fff;
      }
    }
    p.dri_restrict_message {
      margin: 8px 0 0 0;
      padding: 0;
      color: $dri_greytext;
    }
  }
  p.dri_assets_total {
    border-top: 1px solid #D9DADB;
    padding: 10px 0 0 0;
    margin: 0 0 20px 0;
    font-weight: bold;
    color: $dri_grey;
    font-size: 100%;
  }
}

/*-------------- Media asset Image Tools  --------------*/
.dri_asset_tools {
  margin: 5px 0 15px 0;
  padding: 0;
  display: block;
  width: 500px;
  float: left;
  p a {
    margin: 0;
    padding: 0;
    color: $dri_greytext;
    text-decoration: underline;
    float: left;
  }
  p a:hover {
    color: $dri_grey;
  }
  ul {
    margin: 0 20px 0 0;
    padding: 0;
    float: left;
  }
  li {
    float: left;
    list-style: none;
    display: block;
    margin: 0;
    padding: 0;
    a {
      list-style: none;
      color: $dri_greytext;
      text-decoration: none;
      border-right: 1px solid #D9DADB;
      display: block;
      margin: 0;
      padding: 0 10px 0 10px;
    }
    a:hover {
      color: $dri_grey;
      text-decoration: underline;
    }
  }
  li.selected a {
    color: #288DC0;
    font-weight: bold;
  }
  li.first a {
    background: image-url("dri/prev_arrow.png") no-repeat center;
  }
  li.last a {
    border-right: none;
    background: image-url("dri/next_arrow.png") no-repeat center;
  }
}

.dri_green_button {
  padding: 0;
  margin: 0;
  float: left;
  margin: 0 20px 0 0;
  a {
    padding: 0;
    margin: 0;
    color: #00948F;
    border: none;
    font-weight: bold;
    display: block;
    -moz-border-radius: 2px;
    border-radius: 2px;
  }
  a:hover {
    color: #007F79;
    text-decoration: underline;
  }
}

/*-------------- Restricted Media asset --------------*/

h2.dri_restrict_title {
  margin: 0px 0 0 0;
  padding: 0px;
  color: $dri_grey;
  font-weight: bold;
  font-size: 100%;
}

p.dri_restrict_message {
  margin: 0px;
  padding: 0;
  color: $dri_greytext;
}

p.dri_restrict_progress {
  margin: 0px;
  padding: 0px 80px 10px 0;
  color: #00948F;
  text-decoration: underline;
}

input.dri_request_access_button {
  color: #FFF;
  border: none;
  background-color: #00948F;
  padding: 0;
  margin: 0px 0 20px 0;
  width: 230px;
  height: 26px;
  display: block;
  -moz-border-radius: 2px;
  border-radius: 2px;
}

input.dri_request_access_button:hover {
  background-color: #007F79;
}

/*-------------- MetaData Readview  --------------*/


a.dri_toggle_metadata::after {
  content: ' »';
  font-size: 120%;
  font-weight: bold;
  color: $dri_green;
}

.modal-content {
  padding: 10px;
  .dri_object_metadata_readview {
    max-height: 400px;
    overflow: scroll;
    dl {
      padding: 15px;
    }
  }
  .dri_child_links > a {
    color: $dri_grey;
  }
}

dl.dri_object_metadata_readview {
  margin: 0 0 20px 0;
  padding: 0px 80px 0 0;
  dt {
    margin: 10px 0 0 0;
    padding: 0px;
    color: $dri_grey;
    font-weight: bold;
  }
  dd {
    margin: 0;
    padding: 0;
    color: $dri_greytext;
    a {
      margin: 0 0 0 15px;
      padding: 0;
      display: list-item;
      list-style-type: square;
      color: $dri_greytext;
    }
    a:hover {
      text-decoration: underline;
    }
  }
}

/*-------------- Citation Readview  --------------*/
#dri_citatation_modal_id   {
  .modal-content {
    padding: 15px;
      h4 {
      text-transform: uppercase; 
      } 
  } 
}

/*-------------- Collection status and Features  --------------*/

.dri_object_second_block {
  padding: 0;
  margin: 0;
}

.dri_back_search a {
  padding: 0;
  margin: 10px 0 0 0;
  font-weight: normal;
  display: block;
  font-size: 100%;
  font-weight: bold;
  color: $dri_grey;
}

.dri_back_search a:hover { 
  text-decoration: underline;
}

ul.dri_stats {
  margin: 20px 0 20px 0;
  padding: 4px 0 0px 0;
  width: 230px;
  float: left;
  border-top: 1px solid #E1E1E1;
  border-bottom: 1px solid #E1E1E1;
  li {
    float: left;
    width: 230px;
    display: block;
    margin: 0;
    padding: 2px 0 2px 0;
    list-style: none;
    color: $dri_greytext;
  }
  .dri_stat_num {
    float: right;
  }
}

/*-------------- 320x180 Ratio - Image upload  --------------*/
.dri_vc_image {
  border: 1px solid #E1E1E1;
  width: 230px;
  height: 129px;
  margin: 8px 0 0 0;
  overflow: hidden;
}
/* ... */

